# pytris

./: README.md  Taskfile.yml  main.py  mise.toml  pyproject.toml
.helix/: config.toml
src/: colors.py  config.py  main.py  screen_event.py
src/engine/: __init__.py  button.py  helpers.py  painter.py  popup.py  screen.py
src/pytris/: __init__.py
src/screens/game_screen/: __init__.py  game_commands.py  game_painter.py  game_state.py  playfield_painter.py  playfiend_painter.py
src/screens/game_screen/components/: score.py  shape.py  square.py  tetromino.py
src/screens/menu_screen/: __init__.py  graphic.py
src/screens/over_screen/: __init__.py
