[project]
name = "pytris"
version = "0.1.0"
description = "A Clone-tris in python"
readme = "README.md"
authors = [
    { name = "Abderrahmane Tahri Jouti", email = "tj.abderrahmane@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "arcade>=3.3.2",
]

[project.scripts]
pytris = "pytris:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
